--- a/index.html
+++ b/index.html
@@ -1,210 +1,179 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>每日員工點名系統</title>
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Microsoft JhengHei', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #eff6ff 0%, #e0e7ff 100%);
-      min-height: 100vh;
-    }
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      padding: 2rem;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      text-align: center;
-      color: #1f2937;
-      margin-bottom: 1rem;
-    }
-    .toolbar {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 1rem;
-      flex-wrap: wrap;
-    }
-    .toolbar select, .toolbar button {
-      margin: 0.5rem 0.25rem;
-      padding: 0.5rem;
-    }
-    .add-employee-form input {
-      margin-right: 0.5rem;
-      padding: 0.5rem;
-    }
-    .add-employee-form button {
-      padding: 0.5rem 1rem;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
-    }
-    th, td {
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      text-align: center;
-    }
-    .status-present {
-      color: green;
-      font-weight: bold;
-    }
-    .status-leave {
-      color: blue;
-      font-weight: bold;
-    }
-    .status-absent {
-      color: red;
-      font-weight: bold;
-    }
+    body { font-family: sans-serif; margin: 20px; }
+    h1 { text-align: center; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    .green { background-color: #c8e6c9; }
+    .red { background-color: #ffcdd2; }
+    .blue { background-color: #bbdefb; }
+    .controls { margin: 10px 0; }
+    .controls button { margin-right: 10px; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>每日員工點名系統</h1>
-    <div class="toolbar">
-      <div>
-        點名時段：
-        <select id="session">
-          <option value="上午">上午</option>
-          <option value="中午">中午</option>
-        </select>
-        點名人：
-        <select id="recorder">
-          <option value="陳婷媚">陳婷媚</option>
-          <option value="陳姿蓉">陳姿蓉</option>
-          <option value="陳佳宜">陳佳宜</option>
-          <option value="吳淑蓮">吳淑蓮</option>
-        </select>
-        <button onclick="exportCSV()">匯出CSV</button>
-        <button onclick="window.print()">匯出PDF</button>
-      </div>
-      <form class="add-employee-form" onsubmit="addEmployee(event)">
-        <input id="newId" placeholder="員工編號" required />
-        <input id="newName" placeholder="員工姓名" required />
-        <input id="newDept" placeholder="部門" required />
-        <button type="submit">新增員工</button>
-      </form>
-    </div>
-    <table>
-      <thead>
-        <tr>
-          <th>員工編號</th>
-          <th>姓名</th>
-          <th>部門</th>
-          <th>出席</th>
-          <th>請假</th>
-          <th>曠職</th>
-          <th>狀態</th>
-          <th>刪除</th>
-        </tr>
-      </thead>
-      <tbody id="employeeTable"></tbody>
-    </table>
+  <h1>每日員工點名系統</h1>
+  <div class="controls">
+    日期時間：<span id="datetime"></span>
+    <br><br>
+    點名人：
+    <select id="attender">
+      <option value="陳婷媚">陳婷媚</option>
+      <option value="陳姿蓉">陳姿蓉</option>
+      <option value="陳佳宜">陳佳宜</option>
+      <option value="吳淑蓮">吳淑蓮</option>
+    </select>
+    <br><br>
+    點名時段：
+    <select id="session">
+      <option value="上午">上午</option>
+      <option value="中午">中午</option>
+    </select>
+    <br><br>
+    <button onclick="addEmployee()">新增員工</button>
+    <button onclick="exportPDF()">匯出PDF</button>
   </div>
-<script>
-const employees = JSON.parse(localStorage.getItem("employees")) || [
-  { id: "0011", name: "邱瑞統", dept: "模發部" },
-  { id: "0004", name: "陳水波", dept: "模發部" },
-  { id: "0400", name: "趙玉芬", dept: "模發部" },
-  { id: "0405", name: "葉倢羽", dept: "模發部" }
-]; // 可擴充完整名單
+  <table id="attendanceTable">
+    <thead>
+      <tr>
+        <th>員工編號</th>
+        <th>姓名</th>
+        <th>部門</th>
+        <th>出席狀態</th>
+        <th>操作</th>
+      </tr>
+    </thead>
+    <tbody id="employeeList"></tbody>
+  </table>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script>
+    const employees = [
+      { id: "0011", name: "邱瑞統", dept: "模發部" },
+      { id: "0004", name: "陳水波", dept: "模發部" },
+      { id: "0400", name: "趙玉芬", dept: "模發部" },
+      { id: "0405", name: "葉倢羽", dept: "模發部" },
+      { id: "0494", name: "王朋楹", dept: "模發部" },
+      { id: "0531", name: "許嘉紓", dept: "模發部" },
+      { id: "0538", name: "何文泰", dept: "模發部" },
+      { id: "0328", name: "賴榮樂", dept: "基材部" },
+      { id: "0495", name: "賴致錡", dept: "基材部" },
+      { id: "0507", name: "阿發", dept: "基材部" },
+      { id: "0517", name: "黎文全", dept: "基材部" },
+      { id: "0541", name: "范庭進", dept: "基材部" },
+      { id: "0559", name: "阮維峰", dept: "基材部" },
+      { id: "0663", name: "伸迪", dept: "基材部" },
+      { id: "0042", name: "蕭景池", dept: "包裝部" },
+      { id: "0016", name: "施妙菁", dept: "包裝部" },
+      { id: "V002", name: "李慧玲", dept: "包裝部" },
+      { id: "0003", name: "吳淑美", dept: "包裝部" },
+      { id: "0152", name: "陳媛玲", dept: "包裝部" },
+      { id: "0287", name: "曹巧伶", dept: "包裝部" },
+      { id: "0482", name: "朱珮菱", dept: "包裝部" },
+      { id: "0511", name: "文氏雪貞", dept: "包裝部" },
+      { id: "0012", name: "黃秀鉗", dept: "生產部" },
+      { id: "0226", name: "阮氏李", dept: "生產部" },
+      { id: "0402", name: "蔡鴻模", dept: "管理部" },
+      { id: "0017", name: "洪姃廷", dept: "管理部" },
+      { id: "0297", name: "陳淑鸞", dept: "管理部" },
+      { id: "0304", name: "吳淑蓮", dept: "生產部" },
+      { id: "0473", name: "陳婷媚", dept: "管理部" },
+      { id: "0514", name: "陳姿蓉", dept: "管理部" },
+      { id: "0515", name: "陳佳宜", dept: "生產部" },
+      { id: "0552", name: "陳允薰", dept: "生產部" },
+      { id: "0399", name: "豆氏劉", dept: "生產部" },
+      { id: "0465", name: "施俞宣", dept: "生產部" },
+      { id: "0479", name: "希蒂", dept: "生產部" },
+      { id: "0487", name: "尤妮", dept: "生產部" },
+      { id: "0513", name: "斐氏秋", dept: "生產部" },
+      { id: "0519", name: "曹孜孜", dept: "生產部" },
+      { id: "0520", name: "莊凡潔", dept: "生產部" },
+      { id: "0526", name: "黃氏玲", dept: "生產部" },
+      { id: "0527", name: "阮氏夢", dept: "生產部" },
+      { id: "0533", name: "陶氏金銀", dept: "生產部" },
+      { id: "0539", name: "阮氏然", dept: "生產部" },
+      { id: "0547", name: "團氏月", dept: "生產部" },
+      { id: "0548", name: "河氏燕", dept: "生產部" },
+      { id: "0555", name: "押氏通", dept: "生產部" },
+      { id: "0660", name: "范氏黃秋", dept: "生產部" },
+      { id: "0661", name: "陳氏心", dept: "生產部" },
+      { id: "0662", name: "范氏梅", dept: "生產部" }
+    ];
 
-const statusData = JSON.parse(localStorage.getItem("statusData")) || {};
+    const statusColors = { 出席: 'green', 曠職: 'red', 請假: 'blue' };
+    const attendance = JSON.parse(localStorage.getItem('attendance')) || {};
 
-function saveAll() {
-  localStorage.setItem("employees", JSON.stringify(employees));
-  localStorage.setItem("statusData", JSON.stringify(statusData));
-}
+    function renderTable() {
+      const tbody = document.getElementById('employeeList');
+      tbody.innerHTML = '';
+      employees.forEach(e => {
+        const row = document.createElement('tr');
+        const status = attendance[e.id] || '';
+        row.innerHTML = `
+          <td>${e.id}</td>
+          <td>${e.name}</td>
+          <td>${e.dept}</td>
+          <td class="${statusColors[status] || ''}">${status}</td>
+          <td>
+            <button onclick="markStatus('${e.id}', '出席')">出席</button>
+            <button onclick="markStatus('${e.id}', '請假')">請假</button>
+            <button onclick="markStatus('${e.id}', '曠職')">曠職</button>
+            <button onclick="removeEmployee('${e.id}')">刪除</button>
+          </td>
+        `;
+        tbody.appendChild(row);
+      });
+    }
 
-function renderTable() {
-  const tbody = document.getElementById("employeeTable");
-  tbody.innerHTML = "";
-  const session = document.getElementById("session").value;
-  employees.forEach(emp => {
-    const row = document.createElement("tr");
-    const currentStatus = statusData[`${session}_${emp.id}`] || "";
-    row.innerHTML = `
-      <td>${emp.id}</td>
-      <td>${emp.name}</td>
-      <td>${emp.dept}</td>
-      <td><button onclick="setStatus('${emp.id}', 'present')">出席</button></td>
-      <td><button onclick="setStatus('${emp.id}', 'leave')">請假</button></td>
-      <td><button onclick="setStatus('${emp.id}', 'absent')">曠職</button></td>
-      <td class="status-${currentStatus}">${getLabel(currentStatus)}</td>
-      <td><button onclick="deleteEmployee('${emp.id}')">刪除</button></td>
-    `;
-    tbody.appendChild(row);
-  });
-}
+    function markStatus(id, status) {
+      attendance[id] = status;
+      localStorage.setItem('attendance', JSON.stringify(attendance));
+      renderTable();
+    }
 
-function setStatus(id, status) {
-  const session = document.getElementById("session").value;
-  statusData[`${session}_${id}`] = status;
-  saveAll();
-  renderTable();
-}
+    function addEmployee() {
+      const id = prompt("請輸入員工編號：");
+      const name = prompt("請輸入員工姓名：");
+      const dept = prompt("請輸入部門名稱：");
+      if (id && name && dept) {
+        employees.push({ id, name, dept });
+        renderTable();
+      }
+    }
 
-function addEmployee(e) {
-  e.preventDefault();
-  const id = document.getElementById("newId").value.trim();
-  const name = document.getElementById("newName").value.trim();
-  const dept = document.getElementById("newDept").value.trim();
-  if (id && name && dept) {
-    employees.push({ id, name, dept });
-    saveAll();
+    function removeEmployee(id) {
+      const index = employees.findIndex(e => e.id === id);
+      if (index >= 0) {
+        employees.splice(index, 1);
+        delete attendance[id];
+        localStorage.setItem('attendance', JSON.stringify(attendance));
+        renderTable();
+      }
+    }
+
+    function exportPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      doc.text("每日點名紀錄", 10, 10);
+      let y = 20;
+      employees.forEach(e => {
+        const status = attendance[e.id] || '';
+        doc.text(`${e.id} ${e.name} ${e.dept} ${status}`, 10, y);
+        y += 10;
+      });
+      doc.save("點名紀錄.pdf");
+    }
+
+    function updateTime() {
+      document.getElementById('datetime').innerText = new Date().toLocaleString();
+    }
+
+    updateTime();
     renderTable();
-    e.target.reset();
-  }
-}
-
-function deleteEmployee(id) {
-  const idx = employees.findIndex(emp => emp.id === id);
-  if (idx > -1) {
-    employees.splice(idx, 1);
-    delete statusData[`上午_${id}`];
-    delete statusData[`中午_${id}`];
-    saveAll();
-    renderTable();
-  }
-}
-
-function getLabel(status) {
-  switch (status) {
-    case "present": return "出席";
-    case "leave": return "請假";
-    case "absent": return "曠職";
-    default: return "";
-  }
-}
-
-function exportCSV() {
-  const session = document.getElementById("session").value;
-  const recorder = document.getElementById("recorder").value;
-  const now = new Date();
-  const date = `${now.getFullYear()}-${now.getMonth()+1}-${now.getDate()}`;
-  let csv = `日期,點名時段,點名人,員工編號,姓名,部門,狀態\n`;
-  employees.forEach(emp => {
-    const stat = getLabel(statusData[`${session}_${emp.id}`] || "");
-    csv += `${date},${session},${recorder},${emp.id},${emp.name},${emp.dept},${stat}\n`;
-  });
-  const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
-  const link = document.createElement("a");
-  link.href = URL.createObjectURL(blob);
-  link.download = `${date}_${session}_點名紀錄.csv`;
-  link.click();
-}
-
-// 初始化
-renderTable();
-document.getElementById("session").addEventListener("change", renderTable);
-</script>
+    setInterval(updateTime, 1000);
+  </script>
 </body>
 </html>
